--- a/project1/style1.css
+++ b/project1/style1.css
@@ -16,7 +16,7 @@ body {
 
 .image {
   flex: 1;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
 }
@@ -30,6 +30,7 @@ body {
   flex: 1;
   padding: 0 20px;
   background-color: #CA8787;
+  display: block;
 }
 
 .description h2 {
